@@ -37,3 +37,14 @@
     <a c:base="parent" c:mode="partition" href="nested_base.html/test">mode=partition</a>
     <a c:base="parent" c:mode="proxy" href="nested_base.html/test">mode=proxy</a>
 </p>
+
+<?cm4all-rewrite-uri c:base="widget"?>
+<p>
+    c:base=widget (via processing instruction)
+    <a href="base.html/test">Default</a>
+    <a c:mode="direct" href="base.html/test">mode=direct</a>
+    <a c:mode="focus" href="base.html/test">mode=focus</a>
+    <a c:mode="partial" href="base.html/test">mode=partial</a>
+    <a c:mode="partition" href="base.html/test">mode=partition</a>
+    <a c:mode="proxy" href="base.html/test">mode=proxy</a>
+</p>
